syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

package Calculator;

service Calculation {
	rpc Add (CalcRequest) returns (CalcResponse);
	rpc Multiply (CalcRequest) returns (CalcResponse);
}


message CalcRequest {
	double firstNumber = 1;
	double secondNumber = 2;
}

message CalcResponse {
	double result = 1;
}

